Swapping Models To OpenAI Variation

--- a/maskr_app/static/css/base.css
+++ b/maskr_app/static/css/base.css
@@ -5,3 +5,9 @@ html::-webkit-scrollbar {
 html {
   scroll-behavior: smooth;
 }
+
+div#screen {
+    justify-content: space-around;
+    justify-items: center;
+}
+}
