--- a/maskr_app/templates/maskrView.html
+++ b/maskr_app/templates/maskrView.html
@@ -39,11 +39,12 @@
   <section class ="mb-36" id ="upload">
     <form method="POST" enctype="multipart/form-data" id="upload-form" class="mb-20">
       {% csrf_token %}
-      <div class="flex items-center justify-center">
-        <input type="text" name="prompt" placeholder="Enter prompt here..." class="w-20 text-black font-ubuntu font-bold p-2 rounded-md mt-5"/>
+      <div class="flex items-center justify-center relative">
+        <input type="text" name="prompt" placeholder="Enter prompt here..." class="w-30 text-black font-ubuntu font-bold p-1 rounded-md mt-5"/>
+        <button class="text-sm font-medium bg-black rounded-lg text-white p-2  mt-5 ml-2 flex items-center gap-2"> Submit</button>
       </div>
       <div class="w-full flex justify-center relative text-black p-4 rounded-lg mt-10">
-        <label for="file-upload" class="absolute bg-black rounded-lg text-white px-4 py-2 flex items-center gap-2 hover:bg-gray-800 transition duration-200">
+        <label for="file-upload" class="absolute bg-black rounded-lg text-white px-4 py-2 py flex items-center gap-2 hover:bg-gray-800 transition duration-200">
           <img class="w-5" src="{% static 'images/upload.png' %}" alt="">
           <span class="text-sm font-medium">Upload File</span>
         </label>
@@ -51,38 +52,34 @@
       </div>
     </form>
 
+
     {% if uploaded %}
       <div id="screen" class="mx-auto grid grid-cols-2 justify-items-center">
         <div class="w-1/2 bg-white rounded-lg p-4">
           {% if processed %}
             <h2 class="text-xl font-ubuntu font-bold text-center p-2">Before</h2> 
           {% endif %}   
-          <img class="m-auto rounded-md w-[256px] h-[256px] max-h-[256px] max-w-[256px] !important" src="{{ uploaded }}" alt="Before Processed Image">
+          <img class="m-auto rounded-md w-[256px] h-[256px] max-h-[256px] max-w-[256px] object-fill" src="{{ uploaded }}" alt="Before Processed Image">
         </div>
         {% if processed %}
-          <div class="w-1/2 bg-white rounded-lg p-4">
+          <div class="w-1/2 bg-white rounded-lg p-4 mt-3">
             <h2 class="text-xl font-ubuntu font-bold text-center p-2">After</h2>
-            <img class="m-auto rounded-md" src="{{ processed }}" alt="After Processed Image">
+            <img class="m-auto rounded-md mb-6 object-fill" src="{{ processed }}" alt="After Processed Image">
+            <label class="text-md font-ubuntu font-bold p-2 bg-black text-white rounded-lg flex text-center justify-center w-[256px]"><a href="{{ processed }}">Save Image</a></label>
           </div>
-        {% endif %}
-        <div class="flex justify-center items-center mt-2">
-          <label class="text-md font-ubuntu font-bold text-center p-2 bg-black text-white rounded-lg"><a href="{{ processed }}">Save Image</a></label>
-        </div>      
+        {% endif %}    
       </div>
     {% endif %}
 
     {% if processed and not uploaded %}
-      <div id="screen" class="mx-auto grid grid-cols-2 justify-items-center">
-        <div class="w-full bg-white rounded-lg p-4">
+    <div class="flex items-center justify-center">
+        <div class="w-full bg-white rounded-lg p-4 relative">
           <h2 class="text-xl font-ubuntu font-bold text-center p-2">Created Image</h2>
-          <img class="m-auto rounded-md" src="{{ processed }}" alt="After Processed Image">
+          <img class="m-auto rounded-md object-fill" src="{{ processed }}" alt="Created Image">
+          <label class="text-md font-ubuntu font-bold text-center p-2 bg-black text-white rounded-lg flex"><a href="{{ processed }}">Save Image</a></label>
         </div>
-        <div class="flex justify-center items-center mt-2">
-          <label class="text-md font-ubuntu font-bold text-center p-2 bg-black text-white rounded-lg"><a href="{{ processed }}">Save Image</a></label>
-        </div>
-      </div>    
+    </div>    
     {% endif %}
-
   </section>
   
 
