--- a/maskr_app/templates/base.html
+++ b/maskr_app/templates/base.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@800&family=Ubuntu&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@3.0.10/dist/tailwind.min.css" rel="stylesheet">
     <title>{% block title %}maskr{% endblock %}</title>
 </head>
 <body class="bg-gradient-to-r from-[#0b9caa] via-[#3fb884] to-[#7bd85a] scroll-m-0">
