--- a/maskr_app/templates/maskrView.html
+++ b/maskr_app/templates/maskrView.html
@@ -26,7 +26,7 @@
       <div class="grid grid-cols-1 gap-8 md:grid-cols-2 lg:grid-cols-3">
         <div class="bg-white rounded-lg shadow-lg p-6 transition-transform duration-300 transform hover:-translate-y-1 hover:scale-105">
           <h3 class="text-xl font-medium text-gray-900 mb-4 text-center">Image Masking with <span class="underline">AI</span></h3>
-          <p class="text-gray-700 mb-4">Our application uses artificial intelligence to generate masks for user images based on the objects and landscapes detected in the image. With just a few clicks, you can easily select the mask that you want to save.</p>
+          <p class="text-gray-700 mb-4">Our application uses artificial intelligence to generate masks for user images based on the objects and landscapes detected in the image. With just a few clicks, you can easily change or create a picture.</p>
         </div>
         <div class="bg-white rounded-lg shadow-lg p-6 transition-transform duration-300 transform hover:-translate-y-1 hover:scale-105">
           <h3 class="text-xl font-medium text-gray-900 mb-4 text-center"><s>Hard</s> <p></p>Easy to Use</h3>
@@ -90,7 +90,7 @@
           {% if processed %}
             <h2 class="text-xl font-ubuntu font-bold text-center p-2">Before</h2> 
           {% endif %}   
-          <img class="m-auto rounded-md object-fill" src="{{ uploaded }}" alt="Before Processed Image" width="256" height="256">
+          <img class="m-auto rounded-md object-fill" src="{{ uploaded }}" alt="Before Processed Image" width="512" height="512">
         </div>
         {% if processed %}
           <div class="w-1/2 bg-white rounded-lg p-4 mt-3">
@@ -111,7 +111,7 @@
         <h2 class="text-xl font-ubuntu font-bold text-center p-2">Created Image</h2>
         <img class="m-auto rounded-md object-fill" src="{{ processed }}" alt="Created Image">
         <label class="block text-md font-ubuntu font-bold text-center p-2 bg-black text-white rounded-lg mt-4 mx-auto w-36">
-          <a href="{{ processed }}" class="block w-full h-full text-center" download="processed_image.png">Save Image</a>
+          <a href="{{ processed }}" class="block w-full h-full text-center hover:underline" download="processed_image.png">Save Image</a>
         </label>
       </div>
     </div> 
